--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "strict": true, /* Enable all strict type-checking options. */
   },
   "include": [
-    "src"
+    "src",
+    "tests"
   ]
 }
