--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
   "devDependencies": {
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.6.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "typescript": "^4.3.5"
   }
 }
