--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "eslint-plugin-promise": "^5.1.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
+    "jest-mock-extended": "^2.0.2-beta2",
     "lint-staged": "^11.1.2",
     "ts-jest": "^27.0.5",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   },
   "dependencies": {
