--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   },
   "homepage": "https://github.com/Paulo-Marcos/acompanhar_acoes#readme",
   "devDependencies": {
+    "@types/chance": "^1.1.3",
     "@types/jest": "^27.0.1",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.6.2",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "chance": "^1.1.8",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.0",
